# catcircs

./: .gitignore  README.md  catcircs.opam  dune-project
lib/: belnap.ml  circuits.ml  completeness.ml  dune  example.ml  expression.ml  index.ml  inout.ml  mealy.ml  primitive.ml  printer.ml  sig.ml  syntax.ml  table.ml  term.ml  values.ml
lib/basic/: bisim.ml  circuits.ml  expression.ml  inout.ml  mealy.ml  primitive.ml  table.ml  value.ml
lib/belnap/: completeness.ml  signature.ml
lib/concrete/: belnap.ml  booleans.ml
lib/signature/: lattice.ml  value.ml
lib/table/: normal.ml  table.ml
test/: dune
