(lang dune 3.10)

(name catcircs)

(generate_opam_files true)

(source
 (github georgejkaye/catcircs))

(authors "George Kaye")

(maintainers "George Kaye")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name catcircs)
 (synopsis "Helpful tools for working with categorical circuits")
 (description "Helpful tools for working with categorical circuits")
 (depends ocaml dune)
 (tags
  ("digital circuits" "category theory" "monoidal categories" "mealy machines" "stream functions")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
